--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,51 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
-
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>
+			{% block title %}
+				E-Shop
+			{% endblock %}
+		</title>
+		{% block stylesheets %}
+			<link rel="stylesheet" href="{{ asset('assets/css/reset.css') }}"/>
+			<link
+			rel="stylesheet" href="{{ asset('assets/css/style.css') }}"/>
+			{# Google Fonts : Roboto #}
+			<link rel="preconnect" href="https://fonts.googleapis.com">
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+			<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+		{% endblock %}
+	</head>
+	<body>
+		<div class="wrapper">
+			{% block header %}
+				{% include "layout/header.html.twig" %}
+			{% endblock %}
+			{% include "partials/_nav-mobile.html.twig" %}
+			{% include "partials/_flash.html.twig" %}
+			{# {% include "partials/_message.html.twig" %} #}
+			<main>
+				{% block body %}{% endblock %}
+			</main>
+			{% block footer %}
+				{% include "layout/footer.html.twig" %}
+			{% endblock %}
+		</div>
+		{% block javascripts %}
+			<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
+			<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
+			<script type="text/javascript" src="{{ asset('assets/js/app.js') }}"></script>
+			<script type="text/javascript" src="{{ asset('assets/js/modules/tools.js') }}"></script>
+			<script type="text/javascript" src="{{ asset('assets/js/modules/responsive.js') }}"></script>
+			<script type="text/javascript" src="{{ asset('assets/js/modules/nav.js') }}"></script>
+			<script type="text/javascript" src="{{ asset('assets/js/modules/form.js') }}"></script>
+			<script type="text/javascript" src="{{ asset('assets/js/modules/confirmDelete.js') }}"></script>
+			<script type="text/javascript" src="{{ asset('assets/js/modules/purchase.js') }}"></script>
+			<script type="text/javascript" src="{{ asset('assets/js/modules/chart.js') }}"></script>
+			<script type="text/javascript" src="{{ asset('assets/js/modules/customerService.js') }}"></script>
+		{% endblock %}
+	</body>
 </html>
