fix several bugs and facto JS + add remember me

--- a/templates/admin/address/detail.html.twig
+++ b/templates/admin/address/detail.html.twig
@@ -11,8 +11,7 @@
 {# START : admin_address_detail #}
 {% block body %}
 	<section class="page">
-		<h2>Adresse :
-			{{ user.firstName }}
+		<h2>{{ user.firstName }}
 			{{ user.lastName }}</h2>
 		<div
 			class="neptune">
