--- a/templates/admin/category/detail.html.twig
+++ b/templates/admin/category/detail.html.twig
@@ -10,8 +10,7 @@
 {# START : admin_category_detail #}
 {% block body %}
 	<section class="page">
-		<h2>Catégorie :
-			{{ category.name }}</h2>
+		<h2>{{ category.name }}</h2>
 		{# START : card for mobile #}
 		<div class="neptune">
 			<div class="saturn saturn_border-color_blue">
