--- a/templates/admin/purchase/list.html.twig
+++ b/templates/admin/purchase/list.html.twig
@@ -34,7 +34,7 @@
 			{% for purchase in purchases %}
 				<div class="saturn saturn_border-color_blue">
 					<p>{{ purchase.reference|upper }}</p>
-					<p>{{ purchase.createdAt|format_datetime('short', 'none', locale='fr') }}</p>
+					<p>{{ purchase.purchasedAt|format_datetime('short', 'none', locale='fr') }}</p>
 					<p>{{ purchase.total|amount }}</p>
 					{% if purchase.status == statusPaid %}
 						<p class="status status__paid status__paid_color_green">
@@ -85,7 +85,7 @@
 					<tbody>
 						<tr>
 							<td>{{ purchase.reference|upper }}</td>
-							<td>{{ purchase.createdAt|format_datetime('short', 'none', locale='fr') }}</td>
+							<td>{{ purchase.purchasedAt|format_datetime('short', 'none', locale='fr') }}</td>
 							<td>{{ purchase.total|amount }}</td>
 							{% if purchase.status == statusPaid %}
 								<td class="status status__paid status__paid_color_green">
