--- a/templates/purchase/detail.html.twig
+++ b/templates/purchase/detail.html.twig
@@ -28,7 +28,7 @@
 				</p>
 				<p>
 					Commandée le
-					{{ purchase.createdAt|format_datetime('short', 'none', locale='fr') }}
+					{{ purchase.purchasedAt|format_datetime('short', 'none', locale='fr') }}
 				</p>
 				<p>
 					Prix total :
@@ -122,7 +122,7 @@
 							Commandée le
 						</th>
 						<td>
-							{{ purchase.createdAt|format_datetime('short', 'none', locale='fr') }}
+							{{ purchase.purchasedAt|format_datetime('short', 'none', locale='fr') }}
 						</td>
 					</tr>
 					<tr>
