--- a/templates/purchase/detail.html.twig
+++ b/templates/purchase/detail.html.twig
@@ -98,13 +98,13 @@
 				<p>Frais de livraison :</p>
 				<p>{{ purchase.deliveryModePrice|amount }}</p>
 			</div>
-			<div class="purchase-total purchase-.total_border-top-color_gold-crayola">
+			<div class="purchase-total purchase-total_border-top-color_blue">
 				<p>TOTAL :</p>
 				<p>{{ purchase.total|amount }}</p>
 			</div>
 			{# END : card for mobile #}
 			{# START : table for desktop #}
-			<table class="table table-purchase table_background-color_gold-crayola table_color_black table_border-color_blue">
+			<table class="table table-purchase table_background-color_blue table_color_white table_border-color_blue">
 				<thead>
 					<tr>
 						<th>Propriétés</th>
@@ -198,7 +198,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<table class="table table-purchase-item table_background-color_gold-crayola table_color_black table_border-color_blue">
+			<table class="table table-purchase-item table_background-color_blue table_color_white table_border-color_blue">
 				<thead>
 					<tr>
 						<th>Produit</th>
