--- a/templates/admin/address/user-list.html.twig
+++ b/templates/admin/address/user-list.html.twig
@@ -20,7 +20,7 @@
 		{{ form_start(searchAddressForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'search-address-form' }}
 		) }}
 		<div class="form-field">
-			{{ form_label(searchAddressForm, 'Ville', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label' }}) }}
+			{{ form_label(searchAddressForm, 'Ville', { 'label_attr': { 'class': 'form-field__label form-field__address-city-label display-none' }}) }}
 			{{ form_widget(searchAddressForm.city, { 'id': 'address-city-input', 'attr': {'class': 'form-field__input form-field__address-city-input form-field__input_color_black', 'placeholder': '🔍 Rechercher par ville' }}) }}
 			<p class="error-message error-message_color_red error-message-empty-city display-none">
 				Merci de saisir un nom de ville.
