add placeholder + css color

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -22,6 +22,7 @@
   --yellow: #fbbc05;
   --dodger-blue: #1e90ff;
   --spanish-grey: #999999;
+  --slimy-green: #009933;
   /* flash-success */
   --ao-english: #00802b;
   --mint-green: #b3ffb3;
