update class names

--- a/templates/admin/main/dashboard.html.twig
+++ b/templates/admin/main/dashboard.html.twig
@@ -31,7 +31,7 @@
 									Utilisateur avec un rôle Administrateur
 								</p>
 								<a class="page__link square__link page__link_color_blue" href="#">Utilisateurs désactivés</a> #}
-				<a class="page__text-link page__link_color_blue" href="{{ path('admin_user_statistics') }}">Statistiques 📊</a>
+				<a class="page__text-link page__link_color_blue" href="{{ path('admin_user_statistics') }}">Statistiques</a>
 			</div>
 			<div class="square square_border-color_blue">
 				<a class="page__text-link square__link page__link_color_blue" href="{{ path('admin_address_list') }}">Adresses</a>
