--- a/templates/product/list.html.twig
+++ b/templates/product/list.html.twig
@@ -20,7 +20,7 @@
 			</p>
 			{{ form_errors(searchProductForm.name) }}
 		</div>
-		<button type="submit" class="page__button page__submit-button page__search-button page__button_background-color_blue page__button_color_white" id="search-product-button">
+		<button type="submit" class="page__button page__submit-button page__search-button page__button_background-color_blue page__button_color_white" id="product-search-button">
 			Rechercher
 		</button>
 		{{ form_end(searchProductForm) }}
