--- a/templates/address/update.html.twig
+++ b/templates/address/update.html.twig
@@ -9,7 +9,7 @@
 {% block body %}
 	<section class="page">
 		<h2>Mettre à jour : Adresse</h2>
-		{{ form_start(userUpdateAddressForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'user-update-address-form' }}) }}
+		{{ form_start(userUpdateAddressForm, { 'attr': { 'novalidate': 'novalidate', 'class': 'form', 'id': 'address-update-form' }}) }}
 		{# firstName #}
 		<div class="form-field">
 			{{ form_label(userUpdateAddressForm, 'Prénom', { 'label_attr': { 'class': 'form-field__label form-field__address-first-name-label display-none' }}) }}
@@ -32,11 +32,8 @@
 		<div class="form-field">
 			{{ form_label(userUpdateAddressForm, 'Numéro de rue', { 'label_attr': { 'class': 'form-field__label form-field__address-street-number-label display-none' }}) }}
 			{{ form_widget(userUpdateAddressForm.streetNumber, { 'id': 'address-street-number-input', 'attr': { 'class': 'form-field__input form-field__address-street-number-input form-field__input_color_black', 'placeholder': 'Numéro de rue' }}) }}
-			<p class="error-message error-message_color_red error-message-adress-street-number-empty display-none">
+			<p class="error-message error-message_color_red error-message-adress-street-number display-none">
 				Merci de saisir un numéro de rue.
-			</p>
-			<p class="error-message error-message_color_red error-message-address-street-number-validity display-none">
-				Merci de saisir un numéro de rue valide.
 			</p>
 			{{ form_errors(userUpdateAddressForm.streetNumber) }}
 		</div>
@@ -80,16 +77,13 @@
 		<div class="form-field">
 			{{ form_label(userUpdateAddressForm, 'Numéro de téléphone mobile', { 'label_attr': { 'class': 'form-field__label form-field__address-phone-number-label display-none' }}) }}
 			{{ form_widget(userUpdateAddressForm.phoneNumber, { 'id': 'address-phone-number-input', 'attr': { 'class': 'form-field__input form-field__phone-number-input form-field__input_color_black', 'placeholder': 'Numéro de téléphone mobile' }}) }}
-			<p class="error-message error-message_color_red error-message-empty-phone-number display-none">
+			<p class="error-message error-message_color_red error-message-phone-number display-none">
 				Merci de saisir un numéro de téléphone mobile.
-			</p>
-			<p class="error-message error-message_color_red error-message-validity-phone-number display-none">
-				Merci de saisir un numéro de téléphone mobile valide.
 			</p>
 			{{ form_errors(userUpdateAddressForm.phoneNumber) }}
 		</div>
 		{# userUpdateAddressForm submit button #}
-		<button type="submit" class="page__button page__update-button page__submit-button page__button_background-color_orange page__button_color_white" id="user-update-address-button">
+		<button type="submit" class="page__button page__update-button page__submit-button page__button_background-color_orange page__button_color_white" id="address-update-button">
 			Mettre à jour
 		</button>
 		{# END : userUpdateAddressForm #}
